--- a/index.html
+++ b/index.html
@@ -472,6 +472,53 @@
                         />
                     </div>
 
+                    {/* Manual Barcode Input */}
+                    <div className="bg-white rounded-xl shadow-lg p-4">
+                        <label className="block text-sm font-medium text-gray-700 mb-2">
+                            📝 Nhập mã vạch thủ công (nếu không quét được)
+                        </label>
+                        <div className="flex gap-2">
+                            <input
+                                type="text"
+                                value={barcode}
+                                onChange={(e) => setBarcode(e.target.value)}
+                                onKeyPress={(e) => {
+                                    if (e.key === 'Enter' && barcode.trim()) {
+                                        if (canAcceptCode(barcode.trim())) {
+                                            setScannedList(prev => [...prev, barcode.trim()]);
+                                            playBeep();
+                                            setFlashEffect(true);
+                                            setTimeout(() => setFlashEffect(false), 300);
+                                        }
+                                        setBarcode("");
+                                    }
+                                }}
+                                className="flex-1 px-3 py-2 border-2 border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent font-mono"
+                                placeholder="Nhập mã hoặc quét bằng máy quét cầm tay"
+                            />
+                            <button
+                                onClick={() => {
+                                    if (barcode.trim() && canAcceptCode(barcode.trim())) {
+                                        setScannedList(prev => [...prev, barcode.trim()]);
+                                        playBeep();
+                                        setFlashEffect(true);
+                                        setTimeout(() => setFlashEffect(false), 300);
+                                        setBarcode("");
+                                    }
+                                }}
+                                disabled={!barcode.trim()}
+                                className={`px-4 py-2 rounded-lg font-medium text-white ${
+                                    barcode.trim() 
+                                        ? "bg-indigo-600 hover:bg-indigo-700" 
+                                        : "bg-gray-400 cursor-not-allowed"
+                                }`}
+                            >
+                                ➕
+                            </button>
+                        </div>
+                        <p className="text-xs text-gray-500 mt-2">💡 Nhấn Enter hoặc nút ➕ để thêm mã</p>
+                    </div>
+
                     {/* Camera Control */}
                     <button
                         onClick={() => setCameraOn(v => !v)}
@@ -481,7 +528,7 @@
                                 : "bg-green-600 hover:bg-green-700"
                         }`}
                     >
-                        {cameraOn ? "⏸ Tắt Camera Quét" : "▶️ Bật Camera Quét Mã"}
+                        {cameraOn ? "⏸ Tắt Camera Quét" : "▶️ Bật Camera Quét Mã Tự Động"}
                     </button>
 
                     {/* Scanner */}
@@ -605,12 +652,18 @@
                     <div className="bg-white rounded-xl shadow-lg p-4">
                         <h3 className="font-semibold text-gray-800 mb-3">💡 Hướng dẫn sử dụng:</h3>
                         <ol className="text-sm text-gray-600 space-y-2 list-decimal list-inside">
-                            <li>Nhập Webhook URL từ n8n</li>
-                            <li>Bật camera để quét mã vạch tự động</li>
-                            <li>Hướng camera vào mã vạch (quét liên tục)</li>
-                            <li>Chụp ảnh vật tư</li>
-                            <li>Nhấn "Gửi dữ liệu" để xử lý</li>
+                            <li>Nhập Webhook URL từ n8n workflow</li>
+                            <li><strong>Cách 1:</strong> Nhập mã vạch thủ công vào ô input</li>
+                            <li><strong>Cách 2:</strong> Bật camera để quét mã vạch tự động</li>
+                            <li><strong>Cách 3:</strong> Dùng máy quét cầm tay kết nối Bluetooth</li>
+                            <li>Chụp ảnh vật tư cần thu hồi</li>
+                            <li>Nhấn "Gửi dữ liệu" để xử lý trên n8n</li>
                         </ol>
+                        <div className="mt-3 p-3 bg-blue-50 rounded-lg border border-blue-200">
+                            <p className="text-sm text-blue-800">
+                                <strong>💡 Tips:</strong> Nếu camera không quét được, hãy dùng ô nhập thủ công hoặc máy quét mã vạch cầm tay (barcode scanner gun).
+                            </p>
+                        </div>
                     </div>
                 </div>
             );
